Fix issue of invisible section content on navigating directly to a main page anchor due to fade in on scroll effect. Add automated copyright year.

--- a/Styles/_careers.scss
+++ b/Styles/_careers.scss
@@ -110,7 +110,7 @@
 
   h3 {
     font-size: 1.1em;
-    margin-bottom: 0.3em;
+    margin-bottom: 0.7em;
     color: $blue;
   }
 
