--- a/Styles/_mediaQueries.scss
+++ b/Styles/_mediaQueries.scss
@@ -93,6 +93,7 @@
 
   .careers-text {
     width: 92%;
+    text-align: center;
   }
 
   .careers-footer {
